Operaciones Resultados GET, CGET, DELETE y OPTIONS
