# public/api-docs/models/openapi.yaml
@@ -245,6 +245,103 @@ paths:
               description: 'List of HTTP supported methods'
               schema:
                 type: string
+  /results:
+    get:
+      tags:
+        - Results
+      summary: Returns all results
+      description: 'Returns all results from the system that the user has access to.'
+      operationId: api_results_cget
+      responses:
+        '200':
+          description: 'Array of results'
+          content:
+            application/json:
+              schema:
+                properties:
+                  resultados: { description: 'Results array', type: array, items: { $ref: '#/components/schemas/Result' } }
+                type: object
+        '401':
+          $ref: '#/components/responses/401_Unauthorized_Response'
+        '403':
+          $ref: '#/components/responses/403_Forbidden_Response'
+        '404':
+          $ref: '#/components/responses/404_Resource_Not_Found_Response'
+      security:
+        - MiWApiSecurity: []
+    options:
+      tags:
+        - Results
+      summary: Provides the list of HTTP supported methods
+      description: 'Return a `Allow` header with a comma separated list of HTTP supported methods.'
+      operationId: api_results_options
+      responses:
+        '200':
+          description: '`Allow` header &lt;Response body is empty&gt;'
+          headers:
+            Allow:
+              description: 'List of HTTP supported methods'
+              schema:
+                type: string
+  '/results/{resultId}':
+    get:
+      tags:
+        - Results
+      summary: Returns a result based on a single ID
+      description: 'Returns the result identified by `resultId`.'
+      operationId: api_results_get
+      parameters:
+        - $ref: '#/components/parameters/resultId'
+      responses:
+        '200':
+          description: Result
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Result'
+        '401':
+          $ref: '#/components/responses/401_Unauthorized_Response'
+        '403':
+          $ref: '#/components/responses/403_Forbidden_Response'
+        '404':
+          $ref: '#/components/responses/404_Resource_Not_Found_Response'
+      security:
+        - MiWApiSecurity: []
+    delete:
+      tags:
+        - Results
+      summary: 'Deletes a result'
+      description: 'Deletes the result identified by `resultId`.'
+      operationId: api_results_delete
+      parameters:
+        - $ref: '#/components/parameters/resultId'
+      responses:
+        '204':
+          description: 'Result deleted &lt;Response body is empty&gt;'
+        '401':
+          $ref: '#/components/responses/401_Unauthorized_Response'
+        '403':
+          $ref: '#/components/responses/403_Forbidden_Response'
+        '404':
+          $ref: '#/components/responses/404_Resource_Not_Found_Response'
+      security:
+        - MiWApiSecurity: []
+    options:
+      tags:
+        - Results
+      summary: 'Provides the list of HTTP supported methods'
+      description: 'Return a `Allow` header with a comma separated list of HTTP supported methods.'
+      operationId: api_results_options_id
+      parameters:
+        - $ref: '#/components/parameters/resultId'
+      responses:
+        '200':
+          description: '`Allow` header &lt;Response body is empty&gt;'
+          headers:
+            Allow:
+              description: 'List of HTTP supported methods'
+              schema:
+                type: string
 components:
   schemas:
     LoginRequestBody:
@@ -287,6 +384,36 @@ components:
           id: 1508
           email: 'miw@upm.es'
           roles: [ 'ROLE_USER' ]
+    Result:
+      required:
+        - id
+        - result
+        - user_id
+        - time
+      properties:
+        id:
+          description: 'Result Id'
+          type: integer
+          format: int64
+        result:
+          description: 'Result'
+          type: integer
+          format: int64
+        user_id:
+          description: 'User Id'
+          type: integer
+          format: int64
+        time:
+          description: 'Date created'
+          type: string
+          format: date-time
+      type: object
+      example:
+        result:
+          id: 123
+          result: 12324
+          user_id: 9
+          time: "2021-07-21 17:32:28"
     UserData:
       properties:
         email:
@@ -355,6 +482,14 @@ components:
       name: userId
       in: path
       description: 'ID of user'
+      required: true
+      schema:
+        type: integer
+        format: int64
+    resultId:
+      name: resultId
+      in: path
+      description: 'ID of result'
       required: true
       schema:
         type: integer
